--- a/.github/workflows/color-build.yml
+++ b/.github/workflows/color-build.yml
@@ -16,7 +16,9 @@ jobs:
       run: |
         COLOR=$(echo "${CF_COMMIT_MESSAGE}" | awk -F":" '{print $1}')
         echo "COLOR=$COLOR" >> $GITHUB_ENV
-        
+    - name: Set Version
+      run: echo "PACKAGE_VERSION=$(date +'%Y.%m.%d').$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
+
     - uses: actions/checkout@v4
     
     - name: Build the Docker image
@@ -39,6 +41,7 @@ jobs:
     
         env:
           # Recommended to use GitHub secrets for sensitive information
-          OCTOPUS_URL: ${{ secrets.OCTOPUS_SERVER_URL }}
+          OCTOPUS_URL: ${{ vars.OCTOPUS_SERVER_URL }}
           OCTOPUS_API_KEY: ${{ secrets.OCTOPUS_API_KEY }}
-          OCTOPUS_SPACE: 'Default' # Or specify a Space name/ID
+          OCTOPUS_SPACE: 'aperture' # Or specify a Space name/ID
+
