--- a/.github/workflows/color-build.yml
+++ b/.github/workflows/color-build.yml
@@ -12,15 +12,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+  
+    - uses: actions/checkout@v4
+
     - name: extract color from commit message
       run: |
-        COLOR=$(echo "${CF_COMMIT_MESSAGE}" | awk -F":" '{print $1}')
+        COLOR=$(cat color.txt)
         echo "COLOR=$COLOR" >> $GITHUB_ENV
     - name: Set Version
       run: echo "PACKAGE_VERSION=$(date +'%Y.%m.%d').$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
 
-    - uses: actions/checkout@v4
-    
+
     - name: Build the Docker image
       run: docker buildx build . --platform 'linux/amd64,linux/arm64' \
           --build-arg COLOR=${{ env.COLOR }} \
