--- a/.github/workflows/color_update_index.yml
+++ b/.github/workflows/color_update_index.yml
@@ -6,6 +6,9 @@ on:
     - cron: '13 0/3 1/1 * *'
   workflow_dispatch:
 
+    permissions:
+      contents: write 
+      
 jobs:
   build:
     runs-on: ubuntu-latest
