--- a/.github/workflows/color-build.yml
+++ b/.github/workflows/color-build.yml
@@ -24,6 +24,13 @@ jobs:
     - name: Set Version
       run: echo "PACKAGE_VERSION=$(date +'%Y.%m.%d').$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: 'aperture-sci'
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build the Docker image
       run: docker buildx build . --platform 'linux/amd64,linux/arm64' \
