--- a/.github/workflows/color-build.yml
+++ b/.github/workflows/color-build.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: 'aperture-sci'
+        username: 'aperturesci'
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build the Docker image
