--- a/.github/workflows/color-build.yml
+++ b/.github/workflows/color-build.yml
@@ -33,11 +33,13 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build the Docker image
-      run: docker buildx build . --platform 'linux/amd64,linux/arm64' \
+      run: >
+        docker buildx build --platform 'linux/amd64,linux/arm64' \
           --build-arg COLOR=${{ env.COLOR }} \
           --build-arg LATENCY=0 \
           --build-arg ERROR_RATE=0 \
-          --tag aperturesci/rollouts-demo:${{ env.PACKAGE_VERSION }}
+          --tag aperturesci/rollouts-demo:${{ env.PACKAGE_VERSION }} \
+          .
 
     - name: Push build information to Octopus Deploy
       uses: OctopusDeploy/push-build-information-action@v4
